@@ -1,5 +1,13 @@
 2008-08-05 Alejandro G. Castro <acastro@igalia.com>
 
+	Patch cotributed by Victor Jaquez <vjaquez@igalia.com>
+	
+	* src/baobab-ringschart.c (bug #528165):
+	(baobab_ringschart_expose): Added code to control Enhance the
+	scale operation of the screenshot image, not it scales properly.
+	
+2008-08-05 Alejandro G. Castro <acastro@igalia.com>
+
 	Patch contributed by Felipe Erias <femorandeira@igalia.com>, Pablo
 	Santamaria <psantamaria@igalia.com>, Jacobo Aragunde
 	<jaragunde@igalia.com> and Eduardo Lima <elima@igalia.com>
